cmake_minimum_required(VERSION 3.9)
project(mpc)

set(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
add_subdirectory(socketlib)
add_subdirectory(core)
add_subdirectory(utils)
add_subdirectory(communicator)
add_subdirectory(service)
add_executable(mpcreader reader.cpp )
add_executable(mpcwriter writer.cpp )
target_link_libraries(mpcreader journal timer communicator mysocket)
target_link_libraries(mpcwriter journal timer communicator mysocket)